-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.2.0
-
Windows Vista/7 (x64)
QtCreator 2.2.0 beta
-
e785831def67f38ca00e18aa10f35db715fb1f14
I've given the new CDB x64 debugger support of QtCreator 2.2.0 beta, but couldn't get it to work out of the box :
In the "Toolchains" tab of the preferences, QtCreator auto-detected my Qt versions built with MSVC (x86 and x64), but couldn't find the path to cdb.exe.
This is because the auto-detection looks for the debugging tools in "C:\Program Files (x86)" also for the x64 version, however that one is installed in "C:\Program Files" by default.
I could fix the issue by reinstalling the Windows x64 Debugging Tools with the Custom option and manually specifying the install path "C:\Program Files (x86)\Debugging Tools for Windows (x64)". Now the path to cdb.exe could be found and things work fine.
The search path should be adjusted to find the tools in their default install path on Windows Vista/7.