Debugger[CDB]: Detect 64bit Debugging tools in 32bit executables.

Current version fails on some setups, check all postfixes.

Task-number: QTCREATORBUG-4213